<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_feed"
        android:enabled="true"
        android:icon="@drawable/ic_line_weight_white_48dp"
        android:title="@string/bottomnav_feed"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_people"
        android:enabled="true"
        android:icon="@drawable/ic_people_white_48dp"
        android:title="@string/bottomnav_people"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_tasks"
        android:enabled="true"
        android:icon="@drawable/ic_list_white_48dp"
        android:title="@string/bottomnav_tasks"
        app:showAsAction="ifRoom" />


</menu>