<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.meanwhile.flatmates.init.CreateGroupActivity"
    tools:showIn="@layout/activity_create_group">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/creategroup_name_hint"
            android:minWidth="160dp"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_group_add_people_header"/>

        <LinearLayout
            android:id="@+id/people_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.meanwhile.flatmates.init.PersonInputView
                android:id="@+id/flatmate_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#DDD"
                />

            <com.meanwhile.flatmates.init.PersonInputView
                android:id="@+id/flatmate_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <Button
            android:id="@+id/add_person_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_more_people_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
